Improved meta-description and meta-keywords

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" type="image/png" href="/imaginate-icon.png" />
     <meta
       name="description"
-      content="Can you spot AI vs. real photos? Get 5 daily images and test your eye!"
+      content="Can you tell the difference between AI and real photos? Test your skills with this daily game. Play now!"
     />
     <meta
       name="keywords"
-      content="AI photos, real vs AI, AI-generated images, real photos challenge, photo guessing game, daily image quiz, AI detection, test your skills, spot the difference, AI image challenge, real or fake images, AI vs real game, daily AI vs real, image guessing game"
+      content="AI photos, real vs AI, AI-generated images, AI, photo guessing game, daily image quiz, AI detection, daily game, AI image challenge, real or fake images, AI vs real game, daily AI vs real, image guessing game"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
